--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,10 @@ table {
 }
 ul {
 	margin-left:3.3%;
+#Milwaukee {
+	font-size:24px;
 }
-#title {
-	border:2px;
+footer {
+	text-align: center;
+	display: inline-block;
 }
